--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: black;
+    overflow: hidden;
+}
+
+#watermark {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
